--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 
 install:
   - npm install
-  - npm install dora@0.x atool-build@0.x
+  - npm install dora@0.x lutool-build@0.x
 
 node_js:
   - "5"
